Mon Feb 18 13:44:37 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/BDC.xme:

          Updated the GME model to the latest version of PICML.

        * cuts/workers/CPU/CUTS_CPU_Worker.xme:

          - Updated the GME model to the latest version of PICML.
          - Removed the slash from the worker file name and moved it
            to the Location attribute.
          - Bug fix where the CPU worker action's were missing their
            data type.

Mon Feb 18 13:10:29 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/web/quickstart.php:

          Bug fix where one of the list items was missing a closing
          tag.

Mon Feb 18 06:01:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/web/quickstart.php:

          Fixed the ordering of prerequisite technologies and the
          name CoSMIC.

Mon Feb 18 05:59:25 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/web/cuts.master.php:

          Bug fix where hyperlink to home page was invalid when visiting
          a child page of the website.

Mon Feb 18 05:54:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/web/private/images/behavior-aspect.jpg:
        * docs/web/private/images/deploy-bdc.jpg:
        * docs/web/private/images/generate-assemblies.jpg:
        * docs/web/private/images/generate-proxies.jpg:
        * docs/web/private/images/generate-source.jpg:
        * docs/web/private/images/stockbroker-behavior.jpg:
        * docs/web/private/images/stockbroker-workload.jpg:
        * docs/web/private/images/stockdistributor-workload.jpg:
        * docs/web/private/styles/default.css:
        * docs/web/quickstart.php:

          First version of the quick start tutorial for CUTS.

        * docs/web/private/images/blue-pinstrip.bmp:
        * docs/web/private/images/bluegrey-cross.bmp:
        * docs/web/private/images/bluegrey-pinstrip.bmp:

          Removed these files.
